--- a/templates/base.html
+++ b/templates/base.html
@@ -6,17 +6,47 @@
     {% block title %}
       <title>main page</title>
     {% endblock %}
+    {% load static %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Roboto+Mono:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static "css/basic_styles.css" %}">
     {% block extra_css %}
     {% endblock %}
 </head>
 <body>
-  {% block header %}
-  {% endblock %}
-  {% block content %}
-  {% endblock %}
-  {% block footer %}
-  {% endblock %}
+  <div class="dashboard_container">
+      {% block header %}
+        <header class="header">
+          <h3 class="logo"><a href=""><span>Try</span>School</a></h3>
+          <nav class="header_nav">
+              <a class="header_link" href="{% url "english:dashboard" %}">Home</a>
+              <a class="header_link" href="#">calender</a>
+              <a class="header_link" href="#">trail call</a>
+          </nav>
+          <div class="logged_block">
+              <a href="#">{{ request.user.username }}</a>
+              <i class="fa-solid fa-user"></i>
+              <a href="{% url "logout" %}">
+                <i class="fa-solid fa-arrow-right-from-bracket"></i>
+              </a>
+          </div>
+        </header>
+      {% endblock %}
+      <div style="display: flex">
+        {% block aside %}
+          {% include "includes/sidebar.html" %}
+        {% endblock %}
+        {% block content %}
+        {% endblock %}
+      </div>
+      {% block footer %}
+         <footer class="footer">
+            <div>
+              <p>Created by Ihor Utkin</p>
+            </div>
+         </footer>
+      {% endblock %}
+  </div>
 </body>
 </html>
