--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -1,10 +1,16 @@
-{% extends "base.html" %}
-{% load static %}
-{% block extra_css %}
-  <link rel="stylesheet" href="{% static "css/index.css" %}">
-{% endblock %}
-{% block header %}
-  <header class="header">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    {% load static %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Roboto+Mono:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static "css/index.css" %}">
+</head>
+<body>
+    <header class="header">
         <h3 class="logo"><a href=""><span>Try</span>School</a></h3>
         <nav class="header_nav">
             <a class="header_link" href="#">Home</a>
@@ -13,21 +19,19 @@
             <a class="header_link" href="#">Reviews</a>
         </nav>
         <div class="login_btn_block">
-            <a class="login_btn log_in" href="#">Log in</a>
-            <a class="login_btn sign_in" href="#">Sign in</a>
+            <a class="login_btn log_in" href="{% url 'login'%}">Log in</a>
+            <a class="login_btn sign_in" href="{% url "english:create_teacher" %}">Sign in</a>
         </div>
     </header>
-{% endblock %}
-{% block content %}
-  <section class="container_intro">
+    <section class="container_intro">
         <div class="intro">
             <article class="content_intro">
                 <h2 class="title_intro">Lorem ipsum dolor sit amet.</h2>
-                <p class="text_intro">Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit. Exercitationem, voluptatibus sit et corporis
-                    dolore ducimus officia repellendus ex est quo omnis?
-                    Suscipit nulla ea iusto dicta? Sapiente corporis
-                    deserunt aspernatur ea unde distinctio officia tempore
+                <p class="text_intro">Lorem ipsum dolor sit amet consectetur adipisicing 
+                    elit. Exercitationem, voluptatibus sit et corporis 
+                    dolore ducimus officia repellendus ex est quo omnis? 
+                    Suscipit nulla ea iusto dicta? Sapiente corporis 
+                    deserunt aspernatur ea unde distinctio officia tempore 
                     mollitia! Magni consectetur temporibus laborum?</p>
             </article>
             <article class="img_intro"></article>
@@ -39,44 +43,43 @@
             <article class="about_item">
                 <i class="about_icon fa-solid fa-calendar-days"></i>
                 <h3 class="about_item_title">Lorem ipsum dolor sit.</h3>
-                <p class="about_item_text">Lorem ipsum dolor sit, amet consectetur
+                <p class="about_item_text">Lorem ipsum dolor sit, amet consectetur 
                     adipisicing elit. Dolorum, veritatis?</p>
             </article>
             <article class="about_item">
                 <i class="about_icon fa-solid fa-calendar-days"></i>
                 <h3 class="about_item_title">Lorem ipsum dolor sit.</h3>
-                <p class="about_item_text">Lorem ipsum dolor sit, amet consectetur
+                <p class="about_item_text">Lorem ipsum dolor sit, amet consectetur 
                     adipisicing elit. Dolorum, veritatis?</p>
             </article>
             <article class="about_item">
                 <i class="about_icon fa-solid fa-calendar-days"></i>
                 <h3 class="about_item_title">Lorem ipsum dolor sit.</h3>
-                <p class="about_item_text">Lorem ipsum dolor sit, amet consectetur
+                <p class="about_item_text">Lorem ipsum dolor sit, amet consectetur 
                     adipisicing elit. Dolorum, veritatis?</p>
             </article>
             <article class="about_item">
                 <i class="about_icon fa-solid fa-calendar-days"></i>
                 <h3 class="about_item_title">Lorem ipsum dolor sit.</h3>
-                <p class="about_item_text">Lorem ipsum dolor sit, amet consectetur
+                <p class="about_item_text">Lorem ipsum dolor sit, amet consectetur 
                     adipisicing elit. Dolorum, veritatis?</p>
             </article>
             <article class="about_item">
                 <i class="about_icon fa-solid fa-calendar-days"></i>
                 <h3 class="about_item_title">Lorem ipsum dolor sit.</h3>
-                <p class="about_item_text">Lorem ipsum dolor sit, amet consectetur
+                <p class="about_item_text">Lorem ipsum dolor sit, amet consectetur 
                     adipisicing elit. Dolorum, veritatis?</p>
             </article>
             <article class="about_item">
                 <i class="about_icon fa-solid fa-calendar-days"></i>
                 <h3 class="about_item_title">Lorem ipsum dolor sit.</h3>
-                <p class="about_item_text">Lorem ipsum dolor sit, amet consectetur
+                <p class="about_item_text">Lorem ipsum dolor sit, amet consectetur 
                     adipisicing elit. Dolorum, veritatis?</p>
             </article>
         </div>
     </section>
-{% endblock %}
-{% block footer %}
-  <footer class="footer">
-    <p>Created by Ihor Utkin</p>
-  </footer>
-{% endblock %}
+    <footer class="footer">
+        <p>Created by Ihor Utkin</p>
+    </footer>
+</body>
+</html>
