--- a/templates/dashboard/students_list.html
+++ b/templates/dashboard/students_list.html
@@ -5,23 +5,28 @@
 {% endblock %}
 {% block content %}
   <section class="dashboard_block">
-        <article class="lesson_list">
-          {% for student in student_list %}
-            <a href="{% url "english:group-detail" lesson.id %}" class="lesson_item">
-              {{ student.name }}
-            </a>
-          {% endfor %}
-          {% include "includes/pagination.html" %}
-        </article>
-{#      <article class="add_lesson_group">#}
-{#        <div class="add_btn add_lesson">#}
-{#          <p>Add new lesson</p>#}
-{#          <a href="#">Add lesson</a>#}
-{#        </div>#}
-{#        <div class="add_btn add_group">#}
-{#          <p>Add new group</p>#}
-{#          <a href="{% url "english:group-create" %}">Add group</a>#}
-{#        </div>#}
-{#      </article>#}
-  </section>
+    <article class="lesson_list">
+      <table class="table table-striped table-hover table-bordered">
+        <tr>
+          <th>Name</th>
+          <th>Surname</th>
+          <th>Email</th>
+          <th>Group</th>
+          <th>Update</th>
+          <th>Delete</th>
+        </tr>
+        {% for student in student_list %}
+          <tr class="group_item">
+            <td>{{ student.name }}</td>
+            <td>{{ student.surname }}</td>
+            <td><a style="text-decoration: none" href="{% url "english:student-detail" student.id %}">{{ student.email }}</a></td>
+            <td>{{ student.group.name }}%</td>
+            <td><a class="btn btn-primary" href="#">Update</a></td>
+            <td><a class="btn btn-danger" href="#">Delete</a></td>
+          </tr>
+        {% endfor %}
+      </table>
+      {% include "includes/pagination.html" %}
+    </article>
+</section>
 {% endblock %}
