--- a/templates/dashboard/group_detail.html
+++ b/templates/dashboard/group_detail.html
@@ -8,6 +8,7 @@
     <h2>{{ groups.name }} | {{ groups.level }}</h2>
     <div>
       <div class="group_detail_teacher">
+        <strong>Teacher information:</strong>
         <div class="teacher_img"></div>
         {% for teacher in groups.teacher.all %}
           <p><strong>First name:</strong> {{ teacher.first_name }}</p>
@@ -32,8 +33,8 @@
               <td>{{ student.surname }}</td>
               <td>{{ student.email }}</td>
               <td>{{ student.group.name }}</td>
-              <td><a class="btn btn-primary" href="#">Update</a></td>
-              <td><a class="btn btn-danger" href="#">Delete</a></td>
+              <td><a class="btn btn-primary" href="{% url "english:student-update" student.id %}">Update</a></td>
+              <td><a class="btn btn-danger" href="{% url "english:student-delete" student.id %}">Delete</a></td>
             </tr>
           {% endfor %}
           {% include "includes/pagination.html" %}
