--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -2,6 +2,6 @@
   <nav class="aside_dashboard_nav">
       <a class="dashboard_nav_link" href="{% url "english:students-list" %}">All students</a>
       <a class="dashboard_nav_link" href="{% url "english:group-list" %}">All groups</a>
-      <a class="dashboard_nav_link" href="">All lessons</a>
+      <a class="dashboard_nav_link" href="{% url "english:lesson-list" %}">All lessons</a>
   </nav>
 </aside>
