--- a/static/css/basic_styles.css
+++ b/static/css/basic_styles.css
@@ -22,6 +22,16 @@ body{
     background-color: #162F33;
 }
 
+.create_new_admin{
+    padding: 1rem 1rem;
+    font-size: 16px;
+    line-height: 0;
+    font-weight: 500;
+    border: 2px #F6F6F6 solid;
+    border-radius: 10px;
+    margin-right: 1rem;
+}
+
 .logo a{
     color: #F6F6F6;
     text-decoration: none;
