--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -3,82 +3,39 @@
 .dashboard_block{
     display: flex;
     width: 100%;
+    height: 100%;
+    justify-content: space-around;
+    align-items: center;
 }
 
-.lesson_list{
-    display: flex;
-    flex-direction: column;
-    flex-basis: 75%;
-    padding: 1rem;
-    gap: 1rem;
-    /*margin-top: 1rem;*/
-}
-
-.lesson_item{
-    display: flex;
-    justify-content: space-between;
-    text-decoration: none;
-    width: 100%;
-    background-color: #F6F6F6;
-    /*border-radius: 10px;*/
-    padding: 1rem 10px;
-    cursor: pointer;
-    color: black;
-}
-
-.lesson_item:hover{
-    /*background-color: #bcf5bc;*/
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-}
-
-.lesson_topic span{
-    font-weight: bold;
-}
-
-.add_lesson_group{
-    margin: 1rem 0 0 4rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    margin-top: 3rem;
-}
-
-.add_btn{
+.statistic_block{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 400px;
-    height: 200px;
-    border: 2px #001F24 solid;
+    gap: 2rem;
+}
+
+.statistic_block_item{
+    padding: 2rem 5rem;
     border-radius: 10px;
-    overflow: hidden;
-}
-
-.add_btn p{
-    height: 100px;
-    background: #193539;
+    text-align: center;
     color: #F6F6F6;
-    text-align: center;
-    line-height: 100px;
+    background-color: #162F33;
 }
 
-.add_btn a{
-    padding: 1rem 2rem;
-    text-decoration: none;
-    height: 100px;
-    line-height: 50px;
-    color: #001F24;
-    transition: all .3s linear;
-    cursor: pointer;
-    text-align: center;
-    text-transform: uppercase;
+.statistic_block_item p{
+    font-size: 24px;
 }
 
-.add_btn a:hover{
-    background-color: #E9D700;
-    color: #001F24;
-    transition: all .3s linear;
-}
+/*.item_1{*/
+/*    background-color: #46468C;*/
+/*}*/
 
+/*.item_2{*/
+/*    background-color: #D87373;*/
+/*}*/
 
-/* footer */
+/*.item_3{*/
+/*    background-color: #55874B;*/
+/*}*/
+
