--- a/static/css/index.css
+++ b/static/css/index.css
@@ -159,6 +159,92 @@
 
 
 
+.container_blog {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 4rem;
+    width: 100%;
+    max-width: 1200px;
+    text-align: center;
+}
+
+.blog_title {
+    font-size: 48px;
+}
+
+.blog_items_block {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 1rem;
+    margin-top: 2rem;
+}
+
+.blog_item {
+    background-color: #f0f3f3;
+    padding: 2rem 1rem;
+    flex-basis: 30%;
+    text-align: left;
+}
+
+.blog_item_title {
+    font-size: 24px;
+    margin-bottom: 1rem;
+}
+
+.read_more {
+    text-decoration: none;
+    color: #E9D700;
+    transition: color 0.3s;
+}
+
+.read_more:hover {
+    color: #001F24;
+}
+
+/* reviews */
+
+.container_reviews {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 4rem;
+    width: 100%;
+    max-width: 1200px;
+    text-align: center;
+}
+
+.reviews_title {
+    font-size: 48px;
+}
+
+.reviews_items_block {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 1rem;
+    margin-top: 2rem;
+}
+
+.review_item {
+    background-color: #f0f3f3;
+    padding: 2rem 1rem;
+    flex-basis: 30%;
+    text-align: center;
+}
+
+.review_text {
+    font-style: italic;
+    margin-bottom: 1rem;
+}
+
+.review_author {
+    font-weight: bold;
+}
+
+
+
+
+
 
 
 
