--- a/static/css/login/login.css
+++ b/static/css/login/login.css
@@ -4,6 +4,16 @@
     box-sizing: border-box;
 }
 
+.link_home{
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    color: #F6F6F6;
+    font-size: 24px;
+    text-decoration: none;
+    background: transparent;
+}
+
 .login_container{
     position: relative;
     width: 100%;
