--- a/static/css/students/student_detail.css
+++ b/static/css/students/student_detail.css
@@ -9,7 +9,7 @@
     width: 200px;
     height: 200px;
     background-color: #001F24;
-    opacity: .5;
     border-radius: 10px;
     margin-bottom: 2rem;
+    object-fit: cover;
 }
