--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -5,30 +5,22 @@
 {% endblock %}
 {% block content %}
   <section class="dashboard_block">
-        <article class="lesson_list">
-          {% for lesson in lesson_list %}
-            <a href="{% url "english:group-detail" lesson.id %}" class="lesson_item">
-              <div>
-                <p class="lesson_topic">
-                  {{ lesson.topic }} |
-                  <span>{{ lesson.group.level }} {{ lesson.group.name }}</span>
-                </p>
-                <p>{{ lesson.teacher.first_name }} {{ lesson.teacher.last_name }}</p>
-              </div>
-              <p>{{ lesson.start_time }}</p>
-            </a>
-          {% endfor %}
-          {% include "includes/pagination.html" %}
-        </article>
-{#      <article class="add_lesson_group">#}
-{#        <div class="add_btn add_lesson">#}
-{#          <p>Add new lesson</p>#}
-{#          <a href="#">Add lesson</a>#}
-{#        </div>#}
-{#        <div class="add_btn add_group">#}
-{#          <p>Add new group</p>#}
-{#          <a href="{% url "english:group-create" %}">Add group</a>#}
-{#        </div>#}
-{#      </article>#}
+    <div class="statistic_block">
+      <article class="statistic_block_item item_1">
+        <h4>Students</h4>
+        <p>{{ amount_students }}</p>
+      </article>
+      <article class="statistic_block_item item_2">
+        <h4>Groups</h4>
+        <p>{{ amount_groups }}</p>
+      </article>
+      <article class="statistic_block_item item_3">
+        <h4>Lessons</h4>
+        <p>{{ amount_lessons }}</p>
+      </article>
+    </div>
+    <div>
+      {{ plot_div|safe }}
+    </div>
   </section>
 {% endblock %}
