--- a/templates/dashboard/lesson_list.html
+++ b/templates/dashboard/lesson_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% load crispy_forms_filters %}
 {% load static %}
+{% load crispy_forms_filters %}
 {% block extra_css %}
   <link rel="stylesheet" href="{% static "css/group/group_list.css" %}">
 {% endblock %}
@@ -9,21 +9,23 @@
     <div class="groups_container">
       <table class="table table-striped table-hover table-bordered">
         <tr>
-          <th>Name</th>
-          <th>Level</th>
+          <th>Topic</th>
+          <th>Group</th>
           <th>Teacher</th>
-          <th>Progress</th>
+          <th>Start time</th>
+          <th>End time</th>
           <th>Update</th>
           <th>Delete</th>
         </tr>
-        {% for group in groups_list %}
+        {% for lesson in lesson_list %}
           <tr class="group_item">
-            <td><a style="text-decoration: none" href="{% url "english:group-detail" group.id %}">{{ group.name }}</a></td>
-            <td>{{ group.level }}</td>
-            <td>{{ group.teacher.first.first_name }} {{ group.teacher.first.last_name }}</td>
-            <td>{{ group.progress }}%</td>
-            <td><a class="btn btn-primary" href="{% url "english:group-update" group.id %}">Update</a></td>
-            <td><a class="btn btn-danger" href="{% url "english:group-delete" group.id %}">Delete</a></td>
+            <td>{{ lesson.topic }}</td>
+            <td>{{ lesson.group.name }}</td>
+            <td>{{ lesson.teacher.username }}</td>
+            <td>{{ lesson.start_time }}</td>
+            <td>{{ lesson.end_time }}</td>
+            <td><a class="btn btn-primary" href="{% url "english:lesson-update" lesson.id %}">Update</a></td>
+            <td><a class="btn btn-danger" href="{% url "english:lesson-delete" lesson.id %}">Delete</a></td>
           </tr>
         {% endfor %}
       </table>
@@ -34,7 +36,7 @@
         {{ search_form|crispy }}
         <input class="btn btn-success" type="submit" value="Search">
       </form>
-      <a class="btn btn-primary" href="{% url "english:group-create" %}">Create group</a>
+      <a class="btn btn-primary" href="{% url "english:lesson-create" %}">Create lesson</a>
     </div>
   </section>
 {% endblock %}
