--- a/templates/dashboard/students_list.html
+++ b/templates/dashboard/students_list.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 {% load static %}
+{% load crispy_forms_filters %}
 {% block extra_css %}
-  <link rel="stylesheet" href="{% static "css/dashboard.css" %}">
+  <link rel="stylesheet" href="{% static "css/students/students_list.css" %}">
 {% endblock %}
 {% block content %}
-  <section class="dashboard_block">
-    <article class="lesson_list">
+  <section class="students_list_container">
+    <div class="students_list">
       <table class="table table-striped table-hover table-bordered">
         <tr>
           <th>Name</th>
@@ -20,13 +21,20 @@
             <td>{{ student.name }}</td>
             <td>{{ student.surname }}</td>
             <td><a style="text-decoration: none" href="{% url "english:student-detail" student.id %}">{{ student.email }}</a></td>
-            <td>{{ student.group.name }}%</td>
-            <td><a class="btn btn-primary" href="#">Update</a></td>
-            <td><a class="btn btn-danger" href="#">Delete</a></td>
+            <td>{{ student.group.name }}</td>
+            <td><a class="btn btn-primary" href="{% url "english:student-update" student.id %}">Update</a></td>
+            <td><a class="btn btn-danger" href="{% url "english:student-delete" student.id %}">Delete</a></td>
           </tr>
         {% endfor %}
       </table>
       {% include "includes/pagination.html" %}
-    </article>
-</section>
+    </div>
+    <div class="group_create_button">
+      <form action="" method="get" class="form-inline">
+        {{ search_form|crispy }}
+        <input class="btn btn-success" type="submit" value="Search">
+      </form>
+      <a class="btn btn-primary" href="{% url "english:student-create" %}">Create student</a>
+    </div>
+  </section>
 {% endblock %}
