--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,37 +1,46 @@
-{% extends "base.html" %}
-{% load static %}
-{% block extra_css %}
-  <link rel="stylesheet" href="{% static "css/login/login.css" %}">
-{% endblock %}
-{% block content %}
-  <section class="login_container">
-      <article class="login_block">
-          <form class="login_form" method="post" action="{% url 'login' %}">
-              {% csrf_token %}
-              <p class="log_in_title">Log in</p>
-              <input
-                  class="input_field"
-                  type="text"
-                  name="{{ form.username.name }}"
-                  id="{{ form.username.id_for_label }}"
-                  placeholder="username"
-              >
-              <input
-                  class="input_field"
-                  type="password"
-                  name="{{ form.password.name }}"
-                  id="{{ form.password.id_for_label }}"
-                  placeholder="password"
-              >
-              <input class="login_submit_btn" type="submit" value="Submit">
-          </form>
-          <div class="login_content">
-              <h2>Welcome back</h2>
-              <p>Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Et accusantium hic
-                  iste quia corporis libero.</p>
-              <a class="sign_up_btn" href="{% url "english:create_teacher" %}">Sign up</a>
-          </div>
-      </article>
-  </section>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    {% load static %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Roboto+Mono:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static "css/login/login.css" %}">
+</head>
+<body>
+    <a class="link_home" href="{% url "english:index" %}">
+      Go home
+    </a>
+    <section class="login_container">
+        <article class="login_block">
+            <form class="login_form" method="post" action="{% url 'login' %}">
+                {% csrf_token %}
+                <p class="log_in_title">Log in</p>
+                <input
+                    class="input_field"
+                    type="text"
+                    name="{{ form.username.name }}"
+                    id="{{ form.username.id_for_label }}"
+                    placeholder="username"
+                >
+                <input
+                    class="input_field"
+                    type="password"
+                    name="{{ form.password.name }}"
+                    id="{{ form.password.id_for_label }}"
+                    placeholder="password"
+                >
+                <input class="login_submit_btn" type="submit" value="Submit">
+            </form>
+            <div class="login_content">
+                <h2>Welcome back</h2>
+                <p>Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Et accusantium hic
+                    iste quia corporis libero.</p>
+            </div>
+        </article>
+    </section>
+</body>
+</html>
