--- a/templates/base.html
+++ b/templates/base.html
@@ -21,12 +21,12 @@
           <h3 class="logo"><a href=""><span>Try</span>School</a></h3>
           <nav class="header_nav">
               <a class="header_link" href="{% url "english:dashboard" %}">Home</a>
-              <a class="header_link" href="#">calender</a>
-              <a class="header_link" href="#">trail call</a>
           </nav>
           <div class="logged_block">
               <a class="create_new_admin" href="{% url 'english:create-teacher' %}">Add</a>
-              <a href="{% url "english:teacher_admin" request.user.id %}">{{ request.user.username }}</a>
+              {% if request.user.is_authenticated %}
+                <a href="{% url "english:teacher_admin" request.user.pk %}">{{ request.user.username }}</a>
+              {% endif %}
               <i class="fa-solid fa-user"></i>
               <form action="{% url 'logout' %}" method="post">
                 {% csrf_token %}
